# documentor

./: .coverage  .gitignore  COMMIT_MESSAGE.txt  README.md  TODO.md  examples_heading_pipeline.py  force_mswordtree.py  heading_extraction_pipeline.py  hybrid_pipeline.py  metrics.md  mswordtree_pipeline.py  pyproject.toml  python_docx_parser.py  requirements.txt  test_heading_pipeline.py  visualize_tables.py  План_работы_16_01.md
docs/: DOCX_PARSER.md  MARKDOWN_PARSER.md  PDF_PARSER.md  PDF_PARSER_LOGIC.md  README.md  README_RU.md  README_vllm.md  STRUCTURE.md  architecture_diagram.md  docx_parser_diagram_new.md  markdown_parser_diagram.md  pdf_parser_diagram.md  План_работы.txt  План_работы_16_01.md  Полное описание нового пайплайна с langchain.md
documentor/: CUSTOM_COMPONENTS_GUIDE.md  README.md  README_CUSTOM_COMPONENTS.md  __init__.py  exceptions.py  pipeline.py  test_parser.py
documentor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
documentor/cli/: daemon.py
documentor/config/: README.md  __init__.py  config.yaml  docx_config.yaml  llm_config.yaml  loader.py  ocr_config.yaml  pdf_config.yaml
documentor/core/: README.md  __init__.py  interfaces.py  load_env.py
documentor/domain/: README.md  __init__.py  models.py
documentor/examples/: custom_ocr_example.py
documentor/llm/: README.md  __init__.py  base.py  header_detector.py  qwen.py  structure_classifier.py  structure_validator.py
documentor/ocr/: README.md  __init__.py  base.py  dots_ocr.py  manager.py  qwen_ocr.py  reading_order.py
documentor/processing/: README.md  __init__.py  table_merger.py
documentor/utils/: README.md  __init__.py  config_loader.py  file_utils.py  header_consts.py  image_utils.py  ocr_consts.py  ocr_image_utils.py  ocr_layout_utils.py  ocr_output_cleaner.py  pdf_text_extractor.py  text_utils.py
evaluation_scripts/: README.md  calculate_marker_metrics.py
examples/: README_vllm.md  compose.yml  custom_ocr_example.py  env.example
examples/config/: README.md  config.yaml  llm_config.yaml  ocr_config.yaml
experiments/: README.md  calculate_dedoc_metrics.py  calculate_documentor_metrics.py  calculate_marker_metrics.py
experiments1/dots_ocr_text_comparison/: README.md  pipeline.py  run_all.py  setup_experiment.py
experiments1/metrics/: 2412.19495v2_scanned.pdf_annotation.json  ANNOTATION_COMMANDS.md  ANNOTATION_EXAMPLE.md  ANNOTATION_GUIDE.md  FIX_CANVAS_ERROR.md  GUI_ANNOTATION_README.md  METRICS_TASK_DESCRIPTION.md  Plan.txt  QT_ANNOTATION_README.md  QUICKSTART_DEDOC.md  QUICK_START.md  README.md  README_DEDOC.md  README_DEDOC_PIPELINE.md  README_EVALUATION.md  README_RESOURCE_MONITORING.md  TASK_SUMMARY.md  VISUAL_ANNOTATION_README.md  add_page_number_to_scanned.py  adjust_bbox_y.py  analyze_dedoc_structure.py  annotate_all_files.bat  annotate_all_files.sh  annotate_document.py  annotation_schema.json  annotation_tool.py  apply_bbox_offset.py  batch_annotate.py  batch_evaluate.py  bbox_offsets_report.txt  bbox_offsets_results.json  calculate_bbox_offset.py  calculate_bbox_offsets.py  calculate_journal_721_offset.py  compare_annotations_pages.py  compare_annotations_structure.py  compare_parsers.py  comparison_report_journal-10-67-5-676-697.json  convert_all_pdfs_to_md.py  copy_pdf_to_scanned_with_bbox.py  (+44 more)
experiments1/minstr/: qt_annotation_tool.py  teds_analysis.py
experiments1/pdf_text_extraction/: .gitignore  DOCX_COMPLETE_PIPELINE_DESCRIPTION.md  DOCX_PIPELINE_ADAPTATION.md  DOTS_PIPELINE_NOTES.md  MARKER_LICENSE_ANALYSIS.md  MARKER_TABLE_PARSING.md  PIPELINE_DESCRIPTION.md  README.md  README_DOTS_OCR.md  README_PROCESS_ALL_IMAGES.md  README_QUANTIZED.md  RUN_QUANTIZED.md  TEXT_EXTRACTION_PATH.md  compare_image_scales_dots_ocr.py  convert_pdf_to_md_marker.py  debug_hierarchy_test.py  debug_toc_diplom.py  debug_toc_diplom2024.py  docx_complete_pipeline.py  docx_dots_ocr_pipeline.py  docx_final_pipeline.py  docx_header_structure_pipeline.py  docx_hybrid_pipeline.py  docx_image_context_matching.py  docx_image_matching_experiment.py  docx_layout_matching_pipeline.py  docx_pdf_like_pipeline.py  docx_qwen_ocr_pipeline.py  docx_structure_pipeline.py  docx_table_context_replacement.py  docx_table_matching_experiment.py  docx_xml_parser.py  extract_images_from_docx.py  extract_tables_from_docx.py  fix_marker_links.py  get_raw_dots_ocr_output.py  header_hierarchy_pipeline.py  header_level_detector.py  layout_detection_dots_ocr.py  pdf_pipeline_dots_ocr.py  (+25 more)
experiments1/qwen_to_dots_migration/: ANALYSIS.md  MIGRATION_PLAN.md  SUMMARY.md
experiments1/table_extraction_comparison/: README.md  pipeline.py  run_all.py  setup_experiment.py
experiments1/table_recognition_comparison/: README.md  compare_table_recognition.py
test_files/2412.19495v2/: 2412.19495v2.docx
test_files/2508.19267v1/: 2508.19267v1.docx
test_files/journal-10-67-5-676-697/: journal-10-67-5-676-697.docx
test_files/journal-10-67-5-721-729/: journal-10-67-5-721-729.docx
tests/: README.md  __init__.py  conftest.py  test_exceptions.py  test_pipeline.py
tests/config/: __init__.py  test_config_loader.py  test_llm_config.py  test_ocr_config.py
tests/core/: test_load_env.py
tests/data/: docx.docx  md.md
tests/domain/: __init__.py  test_models.py
tests/files_for_tests/: full_markdown.md
tests/fixtures/: README.md  __init__.py  sample_markdown.md
tests/integration/: __init__.py  test_docx.py  test_integration_images_base64.py  test_integration_links_metadata.py  test_integration_metadata_combined.py  test_integration_tables_html.py  test_markdown.py  test_new_features.py  test_pdf.py  test_pipeline.py
tests/llm/: __init__.py  (+5 more)
(+924 files in other folders)
