[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documentor"
version = "0.1.0"
description = "Структурирование документов для RAG с поддержкой LangChain"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "angrymuskrat", email = "mlhakov2011@gmail.com" }]
keywords = ["document", "parsing", "rag", "langchain", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "six>=1.16.0,<2.0.0",
    "openpyxl>=3.0.10,<4.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "numpy>=1.25.2,<2.0.0",
    "plotly>=5.17.0,<6.0.0",
    "natasha>=1.6.0,<2.0.0",
    "wikipedia2vec>=2.0.0,<3.0.0",
    "nltk>=3.8.1,<4.0.0",
    "torch>=2.4.0,<3.0.0",
    "torchvision>=0.19.0,<0.20.0",
    "matplotlib>=3.9.1,<4.0.0",
    # OCR dependencies
    "openai>=1.0.0,<2.0.0",
    "pillow>=10.0.0,<11.0.0",
    "pypdf2>=3.0.0,<4.0.0",
    "langchain-core>=0.1.0,<1.0.0",
    "overrides>=7.0.0,<8.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    # Configuration
    "pyyaml>=6.0",
    # Word document processing
    "python-docx>=1.1.0,<2.0.0",
    "docx2txt>=0.8,<1.0.0",
]


[project.urls]
Homepage = "https://github.com/yourusername/documentor"
Documentation = "https://github.com/yourusername/documentor#readme"
Repository = "https://github.com/yourusername/documentor"
Issues = "https://github.com/yourusername/documentor/issues"

[tool.setuptools]
packages = ["documentor"]

[tool.setuptools.package-data]
documentor = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=documentor",
    "--cov-report=term-missing",
    "--cov-report=html",
]
